-Upgrade to JFX18. Do not merge this commit.